--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,17 +13,21 @@ layout: default
   <ul class="post-list">
     {% for post in site.posts limit:10 %}
       <li>
+        <div class="blog-post">
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
 
         <h2>
           <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         </h2>
+        <div class="post-content">
         {% if post.content contains '<!--break-->' %}
             {{ post.content | split:'<!--break-->' | first }}
             <a href="{{ post.url }}">Read more</a>
         {% endif %}
+        </div>
 
+        </div>
       </li>
     {% endfor %}
   </ul>
