--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -207,6 +207,18 @@
 /**
  * Posts
  */
+.blog-post {
+  background: #fff;
+  webkit-box-shadow: 0px 0px 7px 0px rgba(194,194,194,1);
+  moz-box-shadow: 0px 0px 7px 0px rgba(194,194,194,1);
+  box-shadow: 0px 0px 7px 0px rgba(194,194,194,1);
+
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+
 .post-header {
   margin-bottom: $spacing-unit;
 }
