--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -23,6 +23,7 @@ $rse-color:        #97316E !default;
 // Width of the content area
 $content-width:    1200px !default;
 $rightcol-width:   400px;
+$preview-img-width: 200px;
 
 $on-palm:          1000px !default;
 $on-laptop:        1200px !default;
