Introduce an optional meta key for defining navigation labels

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,11 @@
         <div class="trigger">
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
-            {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            <!-- Use optional meta key 'nav' if it is defined for the page -->
+            {% if my_page.nav %}
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.nav | escape }}</a>
+            {% else if my_page.title %}
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {% endif %}
           {% endfor %}
         </div>
