--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" href="{{ "/" | relative_url }}" alt="RSE logo"><img height=50 src="https://rse-leaders.github.io/researchsoftware.org/img/logo.png"> {{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url }}" alt="RSE logo"><img height=50 src="https://rse-council.github.io/researchsoftware.org/img/logo.png"> {{ site.title | escape }}</a>
   
     {% if page_paths %}
       <nav class="site-nav">
