--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,11 @@
             </div>
         </div>
 
+        <div class="social-links">
+          {%- include social.html -%}
+        </div>
+
     </div>
+
 
 </footer>
