--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+{%- assign social = site.minima.social_links -%}
 <footer class="site-footer h-card">
     <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
@@ -6,13 +7,9 @@
         <div class="footer-col-wrapper">
             <div class="footer-col">
                 <p>{{site.cc-by | markdownify}}</p>
+                <p>This website is maintained on <a rel="me" href="https://github.com/{{ social.github | cgi_escape | escape }}/{{ social.github_repo | cgi_escape | escape }}" target="_blank" title="{{ social.github | escape }}">GitHub</a>.</p>
             </div>
         </div>
-
-        <div class="social-links">
-          {%- include social.html -%}
-        </div>
-
     </div>
 
 
